# cmake_template

./: .gitignore  CMakeLists.txt  cmakeGenerate.bat  cmake_template-config.cmake  dllcopy.bat
cmake/: CompileOptions.cmake  Custom.cmake  FindCSVParser.cmake  FindOpencvWorld.cmake
source/: CMakeLists.txt  version.rc.in
source/lib_a/: CMakeLists.txt
source/lib_a/include/: lib_a.h
source/lib_a/source/: lib_a.cpp
source/project_a/: CMakeLists.txt
source/project_a/include/: MainWindow.h
source/project_a/source/: MainWindow.cpp  main.cpp
